# protonchain

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.sh  hardhat.config.js  package.json
.github/workflows/: ci.yml
contracts/: PrivateToken.sol  ProtonBridge.sol  ProtonDEX.sol  ProtonPrivateNFT.sol  ProtonStaking.sol  ProtonZKVerifier.sol  bridge.rs  dex.rs  nft.rs  private_token.rs  staking.rs
scripts/: deploy.js
src/: lib.rs  sdk.rs
src/consensus/: mod.rs
src/multichain/: mod.rs
src/network/: mod.rs
src/privacy/: mod.rs
src/storage/: mod.rs
src/types/: mod.rs
src/vm/: mod.rs
test/: proton.test.js
tests/: integration_tests.rs
